[gd_scene load_steps=10 format=2]

[ext_resource path="res://OnFootAssets/Assets/WetTileMapComplete.png" type="Texture" id=1]
[ext_resource path="res://OnFootAssets/Assets/LowerWetTileMap.png" type="Texture" id=2]
[ext_resource path="res://OnFootAssets/WetWorld.gd" type="Script" id=3]
[ext_resource path="res://OnFootAssets/WalkingPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="TileSet" id=1]
0/name = "LowerWetTileMap.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "LowerWetTileMap.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "LowerWetTileMap.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "LowerWetTileMap.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "LowerWetTileMap.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "LowerWetTileMap.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "LowerWetTileMap.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 16, 16, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "LowerWetTileMap.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 16, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "WetTileMapComplete.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 64, 144, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 64, Vector2( 0, 1 ), 257, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 260, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 256, Vector2( 2, 0 ), 321, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 261, Vector2( 2, 3 ), 68, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 69, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 257, Vector2( 4, 2 ), 4, Vector2( 5, 0 ), 260, Vector2( 5, 1 ), 324, Vector2( 5, 2 ), 5, Vector2( 5, 3 ), 256, Vector2( 6, 0 ), 321, Vector2( 6, 1 ), 325, Vector2( 6, 2 ), 261, Vector2( 6, 3 ), 68, Vector2( 7, 0 ), 320, Vector2( 7, 1 ), 69, Vector2( 7, 2 ), 65, Vector2( 7, 3 ), 1, Vector2( 8, 0 ), 325, Vector2( 8, 1 ), 325, Vector2( 8, 2 ), 325, Vector2( 8, 3 ), 325 ]
0/autotile/icon_coordinate = Vector2( 0, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "WetTileMapComplete.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 144, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 64, Vector2( 0, 1 ), 257, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 260, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 256, Vector2( 2, 0 ), 321, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 261, Vector2( 2, 3 ), 68, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 69, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 257, Vector2( 4, 2 ), 4, Vector2( 5, 0 ), 260, Vector2( 5, 1 ), 324, Vector2( 5, 2 ), 5, Vector2( 5, 3 ), 256, Vector2( 6, 0 ), 321, Vector2( 6, 1 ), 325, Vector2( 6, 2 ), 261, Vector2( 6, 3 ), 68, Vector2( 7, 0 ), 320, Vector2( 7, 1 ), 69, Vector2( 7, 2 ), 65, Vector2( 7, 3 ), 1, Vector2( 8, 0 ), 325, Vector2( 8, 1 ), 325, Vector2( 8, 2 ), 325, Vector2( 8, 3 ), 325 ]
0/autotile/icon_coordinate = Vector2( 4, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
    uniform float cloudStrength = .9;
    uniform float speed = 20;
    uniform vec3 color = vec3(0.95, 0.95, 0.90);
    uniform float light = 1.0;
    
    float rand(vec2 coord){
    	return fract(sin(dot(coord, vec2(12.9898,78.233))) * 43758.5453);
    }
    
    float noise(vec2 coord){
    	vec2 i = floor(coord);
    	vec2 f = fract(coord);
    
    	// 4 corners of a rectangle surrounding our point
    	float a = rand(i);
    	float b = rand(i + vec2(1.0, 0.0));
    	float c = rand(i + vec2(0.0, 1.0));
    	float d = rand(i + vec2(1.0, 1.0));
    
    	vec2 cubic = f * f * (3.0 - 2.0 * f);
    
    	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
    }
    
    void fragment() {
    	vec2 coord = UV * 20.0;
    
    	vec2 motion = vec2( noise(coord + vec2(TIME * -speed, TIME * speed)) );
    
    	float final = noise(coord + motion);
    	
    	COLOR = vec4(color*light, final * cloudStrength);
    }"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/cloudStrength = 0.9
shader_param/speed = 20.0
shader_param/color = Vector3( 0.95, 0.95, 0.9 )
shader_param/light = 1.0

[node name="WetWorld" type="Node2D"]
script = ExtResource( 3 )

[node name="LowerStones" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="UpperStonesWet" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="UpperStonesDry" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 278, 114 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="Fog" type="Node2D" parent="."]
z_index = 1

[node name="Fog" type="ColorRect" parent="Fog"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1020.0
margin_bottom = 600.0
